--- a/THIAGOFLEXMEUBLOG/artigos.htm
+++ b/THIAGOFLEXMEUBLOG/artigos.htm
@@ -25,7 +25,7 @@
             <div>
                 <img src = "imagens/jose.jpg">  
             </div>
-            <h1>José se mata com 3 facadas nas costas</h1>
+            <h1>José não consegue pagar as dívidas com o fast-food</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi molestias vel ullam saepe placeat consequatur eveniet dolores neque et inventore repudiandae dolorem culpa, repellendus quisquam dolor! Sed, incidunt? Perferendis, laborum.</p>
             <br>
         </div>
